force-app/main/default/objects/ImportOrder__c/ImportOrder__c.object-meta.xml
<CustomObject>
    <label>Import Order</label>
    <nameField>
        <displayFormat>IO-{00000}</displayFormat>
        <label>Import Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>