force-app/main/default/objects/ImportOrder__c/fields/ActivationBlockSource__c.field-meta.xml
<CustomField>
    <fullName>ActivationBlockSource__c</fullName>
    <label>Activation Block Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>