force-app/main/default/objects/ImportOrder__c/fields/addressLine1__c.field-meta.xml
<CustomField>
    <fullName>addressLine1__c</fullName>
    <label>addressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>