force-app/main/default/objects/ImportOrder__c/fields/addressLine2__c.field-meta.xml
<CustomField>
    <fullName>addressLine2__c</fullName>
    <label>addressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>