force-app/main/default/objects/ImportOrder__c/fields/AmountExclVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountExclVAT__c</fullName>
    <description>Stores the Order total without VAT (Aggregated amount of the total product prices)</description>
    <label>Amount (Excl. VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>