force-app/main/default/objects/ImportOrder__c/fields/BillingHouseNumberAddition__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNumberAddition__c</fullName>
    <label>Billing House Number Addition</label>
    <length>10</length>
    <type>Text</type>
</CustomField>