force-app/main/default/objects/ImportOrder__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Billing Street</label>
    <length>155</length>
    <type>Text</type>
</CustomField>