force-app/main/default/objects/ImportOrder__c/fields/billtoFortheAttentionof__c.field-meta.xml
<CustomField>
    <fullName>billtoFortheAttentionof__c</fullName>
    <label>bill to For the Attention of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>