force-app/main/default/objects/ImportOrder__c/fields/CanCreateB2BTriggerUtil__c.field-meta.xml
<CustomField>
    <fullName>CanCreateB2BTriggerUtil__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Complete&apos;), TRUE, 
		IF(AND(ISPICKVAL(Status__c, &apos;Error&apos;),NoOfRetries__c&gt;0, NoOfRetries__c&lt;5), FALSE, TRUE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Create B2B Trigger Util</label>
    <type>Checkbox</type>
</CustomField>