force-app/main/default/objects/ImportOrder__c/fields/CommunicationLanguage__c.field-meta.xml
<CustomField>
    <fullName>CommunicationLanguage__c</fullName>
    <label>Communication Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>