force-app/main/default/objects/ImportOrder__c/fields/CourierInformation__c.field-meta.xml
<CustomField>
    <fullName>CourierInformation__c</fullName>
    <description>Information to be printed on the parcel labels for the carriers and sometimes for the trade partners if they are picking up the goods at the warehouse with their own trucks.</description>
    <inlineHelpText>Information to be printed on the parcel labels for the carriers and sometimes for the trade partners if they are picking up the goods at the warehouse with their own trucks.</inlineHelpText>
    <label>Courier Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>