force-app/main/default/objects/ImportOrder__c/fields/CreateddateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateddateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Createddate Time</label>
    <type>DateTime</type>
</CustomField>