force-app/main/default/objects/ImportOrder__c/fields/Customdeliverydate__c.field-meta.xml
<CustomField>
    <fullName>Customdeliverydate__c</fullName>
    <label>Custom delivery date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>