force-app/main/default/objects/ImportOrder__c/fields/customDeliveryDateFormat__c.field-meta.xml
<CustomField>
    <fullName>customDeliveryDateFormat__c</fullName>
    <label>customDeliveryDateFormat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>