force-app/main/default/objects/ImportOrder__c/fields/customerNo__c.field-meta.xml
<CustomField>
    <fullName>customerNo__c</fullName>
    <externalId>true</externalId>
    <label>customerNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>