force-app/main/default/objects/ImportOrder__c/fields/customerOrderType__c.field-meta.xml
<CustomField>
    <fullName>customerOrderType__c</fullName>
    <inlineHelpText>Indicates if the order is for a Business or Private Individual</inlineHelpText>
    <label>customerOrderType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>