force-app/main/default/objects/ImportOrder__c/fields/DebugMessage__c.field-meta.xml
<CustomField>
    <fullName>DebugMessage__c</fullName>
    <label>Debug Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>