force-app/main/default/objects/ImportOrder__c/fields/deliveryIdLocation__c.field-meta.xml
<CustomField>
    <fullName>deliveryIdLocation__c</fullName>
    <externalId>true</externalId>
    <label>deliveryIdLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>