force-app/main/default/objects/ImportOrder__c/fields/DigitalActivationEmail__c.field-meta.xml
<CustomField>
    <fullName>DigitalActivationEmail__c</fullName>
    <label>Digital Activation Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>