force-app/main/default/objects/ImportOrder__c/fields/DiscountedPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPrice__c</fullName>
    <label>Discounted Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>