force-app/main/default/objects/ImportOrder__c/fields/discountRate__c.field-meta.xml
<CustomField>
    <fullName>discountRate__c</fullName>
    <label>Discount rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>