force-app/main/default/objects/ImportOrder__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Discount value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>