force-app/main/default/objects/ImportOrder__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <formula>DATEVALUE(RIGHT(LEFT(orderDate__c,10),4)+&quot;-&quot;+ RIGHT(LEFT(orderDate__c,5),2)+&quot;-&quot;+LEFT(orderDate__c,2))</formula>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>