force-app/main/default/objects/ImportOrder__c/fields/ExternalOrderId__c.field-meta.xml
<CustomField>
    <fullName>ExternalOrderId__c</fullName>
    <label>ExternalOrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>