force-app/main/default/objects/ImportOrder__c/fields/IntegrationUniqueId__c.field-meta.xml
<CustomField>
    <fullName>IntegrationUniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Id sent from integration to identify each individual Import Order record to prevent duplicate Order Header and Order Line records received</description>
    <label>Integration Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>