force-app/main/default/objects/ImportOrder__c/fields/InvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail__c</fullName>
    <label>InvoiceEmail</label>
    <type>Email</type>
</CustomField>