force-app/main/default/objects/ImportOrder__c/fields/invoiceIdLocation__c.field-meta.xml
<CustomField>
    <fullName>invoiceIdLocation__c</fullName>
    <externalId>true</externalId>
    <label>invoiceIdLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>