force-app/main/default/objects/ImportOrder__c/fields/InvoiceNote__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNote__c</fullName>
    <label>Invoice Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>