force-app/main/default/objects/ImportOrder__c/fields/IsGuest__c.field-meta.xml
<CustomField>
    <fullName>IsGuest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest</label>
    <type>Checkbox</type>
</CustomField>