force-app/main/default/objects/ImportOrder__c/fields/ItemGroupCreationRequired__c.field-meta.xml
<CustomField>
    <fullName>ItemGroupCreationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Group Creation Required</label>
    <type>Checkbox</type>
</CustomField>