force-app/main/default/objects/ImportOrder__c/fields/itemGroupId__c.field-meta.xml
<CustomField>
    <fullName>itemGroupId__c</fullName>
    <label>item GroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>