force-app/main/default/objects/ImportOrder__c/fields/JobOrderCount__c.field-meta.xml
<CustomField>
    <fullName>JobOrderCount__c</fullName>
    <label>Job Order Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>