force-app/main/default/objects/ImportOrder__c/fields/LineItemShipping__c.field-meta.xml
<CustomField>
    <fullName>LineItemShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LineItem Shipping</label>
    <type>Checkbox</type>
</CustomField>