force-app/main/default/objects/ImportOrder__c/fields/LineItemTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemTotal__c</fullName>
    <label>Line Item Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>