force-app/main/default/objects/ImportOrder__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <label>Line Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>