force-app/main/default/objects/ImportOrder__c/fields/NetSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>NetSalesPrice__c</fullName>
    <label>Net Sales Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>