force-app/main/default/objects/ImportOrder__c/fields/NoOfRetries__c.field-meta.xml
<CustomField>
    <fullName>NoOfRetries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. Of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>