force-app/main/default/objects/ImportOrder__c/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <label>Operating Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>