force-app/main/default/objects/ImportOrder__c/fields/orderDate__c.field-meta.xml
<CustomField>
    <fullName>orderDate__c</fullName>
    <label>orderDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>