force-app/main/default/objects/ImportOrder__c/fields/orderItemGroupInsertComplete__c.field-meta.xml
<CustomField>
    <fullName>orderItemGroupInsertComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderItem Group Insert Complete</label>
    <type>Checkbox</type>
</CustomField>