force-app/main/default/objects/ImportOrder__c/fields/OrderItemProcessing__c.field-meta.xml
<CustomField>
    <fullName>OrderItemProcessing__c</fullName>
    <formula>LastModifiedDate + 1 *(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderItem processing</label>
    <type>DateTime</type>
</CustomField>