force-app/main/default/objects/ImportOrder__c/fields/orderItemRef__c.field-meta.xml
<CustomField>
    <fullName>orderItemRef__c</fullName>
    <label>orderItemRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>