force-app/main/default/objects/ImportOrder__c/fields/orderRef__c.field-meta.xml
<CustomField>
    <fullName>orderRef__c</fullName>
    <label>orderRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>