force-app/main/default/objects/ImportOrder__c/fields/orderType__c.field-meta.xml
<CustomField>
    <fullName>orderType__c</fullName>
    <label>orderType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>