force-app/main/default/objects/ImportOrder__c/fields/PaymentCreationDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentCreationDate__c</fullName>
    <description>Timestamp when provided by eCommerce for prepaid orders</description>
    <label>Payment Creation Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>