force-app/main/default/objects/ImportOrder__c/fields/PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodType__c</fullName>
    <label>Payment Method Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>