force-app/main/default/objects/ImportOrder__c/fields/Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Postalcode__c</fullName>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>