force-app/main/default/objects/ImportOrder__c/fields/PricebookOverride__c.field-meta.xml
<CustomField>
    <fullName>PricebookOverride__c</fullName>
    <label>Pricebook Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>