force-app/main/default/objects/ImportOrder__c/fields/ReadyForPrivateIndividual__c.field-meta.xml
<CustomField>
    <fullName>ReadyForPrivateIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determined if the Order is ready to be created for a Private Individual. Because for a newly created Private Individual Account the NetsuiteInternalId might not be populated immediately the Order is not ready to be created.</description>
    <label>Ready For Private Individual</label>
    <type>Checkbox</type>
</CustomField>