force-app/main/default/objects/ImportOrder__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>