force-app/main/default/objects/ImportOrder__c/fields/Schoolnameshipping__c.field-meta.xml
<CustomField>
    <fullName>Schoolnameshipping__c</fullName>
    <label>School name shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>