force-app/main/default/objects/ImportOrder__c/fields/SchoolNumber__c.field-meta.xml
<CustomField>
    <fullName>SchoolNumber__c</fullName>
    <label>School Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>