force-app/main/default/objects/ImportOrder__c/fields/ShipImmediately__c.field-meta.xml
<CustomField>
    <fullName>ShipImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship Immediately</label>
    <type>Checkbox</type>
</CustomField>