force-app/main/default/objects/ImportOrder__c/fields/ShippingCostInclVAT__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostInclVAT__c</fullName>
    <description>Stores the shipping cost including VAT received from integration (eCommerce)</description>
    <label>Shipping Cost (Incl. VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>