force-app/main/default/objects/ImportOrder__c/fields/ShippingCostMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostMethod__c</fullName>
    <label>Shipping Cost Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCostMethod</valueSetName>
    </valueSet>
</CustomField>