force-app/main/default/objects/ImportOrder__c/fields/ShippingCostMethodNsId__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostMethodNsId__c</fullName>
    <label>ShippingCostMethodNsId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>