force-app/main/default/objects/ImportOrder__c/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <formula>DATEVALUE(RIGHT(LEFT(Customdeliverydate__c,10),4)+&quot;-&quot;+ RIGHT(LEFT(Customdeliverydate__c,5),2)+&quot;-&quot;+LEFT(Customdeliverydate__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingDate</label>
    <type>Date</type>
</CustomField>