force-app/main/default/objects/ImportOrder__c/fields/Shiptoemail__c.field-meta.xml
<CustomField>
    <fullName>Shiptoemail__c</fullName>
    <label>Ship to email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>