force-app/main/default/objects/ImportOrder__c/fields/ShiptoFortheAttentionof__c.field-meta.xml
<CustomField>
    <fullName>ShiptoFortheAttentionof__c</fullName>
    <label>Ship to For the Attention of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>