force-app/main/default/objects/ImportOrder__c/fields/SwellId__c.field-meta.xml
<CustomField>
    <fullName>SwellId__c</fullName>
    <label>SwellId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>