force-app/main/default/objects/ImportOrder__c/fields/taxCode__c.field-meta.xml
<CustomField>
    <fullName>taxCode__c</fullName>
    <label>taxCode</label>
    <length>56</length>
    <type>Text</type>
</CustomField>