force-app/main/default/objects/ImportOrder__c/fields/taxCountry__c.field-meta.xml
<CustomField>
    <fullName>taxCountry__c</fullName>
    <label>taxCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>