force-app/main/default/objects/ImportOrder__c/fields/taxPrice__c.field-meta.xml
<CustomField>
    <fullName>taxPrice__c</fullName>
    <label>taxPrice</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>