force-app/main/default/objects/ImportOrder__c/fields/taxRate__c.field-meta.xml
<CustomField>
    <fullName>taxRate__c</fullName>
    <label>taxRate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>