force-app/main/default/objects/ImportOrder__c/fields/taxSchedule__c.field-meta.xml
<CustomField>
    <fullName>taxSchedule__c</fullName>
    <label>taxSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>