force-app/main/default/objects/ImportOrder__c/fields/TotalLineCountQuantities__c.field-meta.xml
<CustomField>
    <fullName>TotalLineCountQuantities__c</fullName>
    <description>Stores the total (aggregated) quantities of all the import line quantities, i.e the total product quantity of the Order</description>
    <label>Total Line Count Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>