force-app/main/default/objects/ImportOrder__c/fields/TriggerBusinessLogic__c.field-meta.xml
<CustomField>
    <fullName>TriggerBusinessLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Business Logic</label>
    <type>Checkbox</type>
</CustomField>