force-app/main/default/objects/ImportOrder__c/fields/UseImportOrderLocation__c.field-meta.xml
<CustomField>
    <fullName>UseImportOrderLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Import Order Location</label>
    <type>Checkbox</type>
</CustomField>