force-app/main/default/objects/ImportOrder__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>