force-app/main/default/objects/ImportOrder__c/fields/UserSwellId__c.field-meta.xml
<CustomField>
    <fullName>UserSwellId__c</fullName>
    <description>SwellId for User</description>
    <label>User SwellId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>