force-app/main/default/objects/ImportOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>Order__c</columns>
    <columns>OrderProduct__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Customdeliverydate__c</columns>
    <columns>customDeliveryDateFormat__c</columns>
    <columns>customerNo__c</columns>
    <columns>deliveryIdLocation__c</columns>
    <columns>email__c</columns>
    <columns>invoiceIdLocation__c</columns>
    <columns>orderType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Netherlands</value>
    </filters>
    <filters>
        <field>Postalcode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>