force-app/main/default/objects/ImportOrder__c/listViews/All_B2B_eCommerce.listView-meta.xml
<ListView>
    <fullName>All_B2B_eCommerce</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>OrderProduct__c</columns>
    <columns>Order__c</columns>
    <columns>customerNo__c</columns>
    <columns>orderDate__c</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Error__c</columns>
    <columns>PaymentMethodType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>eCommerce B2B</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>eCommerce B2C</value>
    </filters>
    <filters>
        <field>customerOrderType__c</field>
        <operation>equals</operation>
        <value>business</value>
    </filters>
    <label>All - B2B eCommerce</label>
</ListView>