force-app/main/default/objects/ImportOrder__c/listViews/All_B2B_Shop.listView-meta.xml
<ListView>
    <fullName>All_B2B_Shop</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>customerNo__c</columns>
    <columns>orderDate__c</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>B2B Shop</value>
    </filters>
    <label>All - B2B Shop</label>
</ListView>