force-app/main/default/objects/ImportOrder__c/listViews/All_Failed_B2B_eCommerce.listView-meta.xml
<ListView>
    <fullName>All_Failed_B2B_eCommerce</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>customerNo__c</columns>
    <columns>orderDate__c</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Error__c</columns>
    <columns>ProductId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>eCommerce B2B</value>
    </filters>
    <label>All failed - B2B eCommerce</label>
</ListView>